# Console-Chess

./: CMakeLists.txt  README.md  main.cpp
Board/: Board.cpp  Board.h
Board/Pieces/: Bishop.cpp  Bishop.h  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Queen.h  Rook.cpp
Board/Pieces/Abstract/: Coords.h  Piece.cpp  Piece.h  PieceAttributes.h
GameState/: ConsoleChess.cpp  ConsoleChess.h  GameState.cpp  GameState.h
GameState/Board/: Board.cpp  Board.h
GameState/Board/Pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
GameState/Board/Pieces/Abstract/: Coords.h  Piece.cpp  Piece.h
GameState/Notation/: NotationToCoords.cpp
GameState/Visual/: Console.cpp  VisualConsole.cpp
